Archive2/33/0f09266ac91e7c/output
main.cpp:3:1: error: expected unqualified-id before ‘{’ token
 {
 ^
