Archive2/33/0f09266ac91e7c/main.cpp
#include <iostream>
int main ();
{
int a = 10;
while( a < 20 )
{
cout << "enter any positive integer number";
a++;
}
return 0;
}



